# img-analyzer

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: img_analysis_demo_pipeline.py  main.py  pipeline.py  server.py
src/product_categorizer/: google_taxonomy.json  image_analyzer.py
src/product_categorizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/product_categorizer/prompts/: analysis_system.md  analysis_user.md  taxonomy_keyword.md  taxonomy_leaf_first.md  taxonomy_two_step_l1.md  taxonomy_two_step_leaf.md
src/web/: index.html
