[project]
name = "product-categorizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-vision>=3.4.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "zenml[local]==0.93.3",
    "kfp>=2.6.0",
    "urllib3<2.6.0",
    "grpcio!=1.68.*,!=1.69.*,!=1.70.*",
    "gcsfs!=2025.5.0,!=2025.5.0.post1,<=2024.12.0",
    "google-cloud-secret-manager",
    "google-cloud-container>=2.21.0",
    "google-cloud-artifact-registry>=1.11.3",
    "google-cloud-storage>=2.9.0",
    "google-cloud-aiplatform>=1.34.0",
    "google-cloud-build>=3.11.0",
    "google-cloud-pipeline-components>=2.19.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-logging>=3.8.0",
    "kubernetes",
    "pygithub>=2.8.1",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "google-genai>=1.0.0",
    "rich>=13.0.0",
    "ruff>=0.15.2",
    "fastapi>=0.133.0",
    "uvicorn>=0.41.0",
    "secure>=1.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "B008",   # function call in default argument
    "SIM108", # ternary operator (often less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["product_categorizer"]
